logoLeftAlign issue, responsiveness & moseover event

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,33 +87,36 @@ nav{
   width: 100vw;
 }
 
+
 .logoImg{
-  width: 90px;
-  height: 45px;
+  width: 100%;
+  height: 100%;
 }
 
 .menu{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   font-family: serif;
   font-size: 1.15rem;
   font-weight: 500;
   height: 100%;
-  width: 33vw;
+  width: 38vw;
 }
 .menu > a{
+  display: flex;
+  justify-content: space-between;
   text-decoration: none;
-  padding: "0px 1rem";
   height: "100%";
-  cursor: "pointer"
+  cursor: "pointer";
+  color:black
 }
-.menu > a :hover{
+/* .menu a:hover{
   color: rgb(32, 117, 240);
-}
+} */
 
 .dwnldZET button{
-  /* background: rgb(32, 117, 240);  */
+  background: rgb(32, 117, 240); 
   border: none; 
   color: rgb(255, 255, 255); 
   border-radius: 8px; 
